fixed spacing on sponsorship bottom

--- a/css/main.css
+++ b/css/main.css
@@ -1097,7 +1097,7 @@ button {
   }
 
   #sponsors .interest {
-    margin-top: -60px;
+    margin-bottom: 20px;
   }
 
   #sponsors .interest h3 {
